--- a/install/roles/cobbler/templates/settings.j2
+++ b/install/roles/cobbler/templates/settings.j2
@@ -77,7 +77,7 @@ default_kickstart: /var/lib/cobbler/kickstarts/default.ks
 # configure all installed systems to use these nameservers by default
 # unless defined differently in the profile.  For DHCP configurations
 # you probably do /not/ want to supply this.
-default_name_servers: ['10.145.89.100']
+#default_name_servers: ['10.145.89.100']
 
 # if using the authz_ownership module (see the Wiki), objects
 # created without specifying an owner are assigned to this
